--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <!--Docker-->
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
         <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
-        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
+        <!--<docker-registry>docker-registry.eprocurement.systems</docker-registry>-->
     </properties>
 
     <dependencyManagement>
