--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,7 @@
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
-        <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
-        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
+        <docker-registry>docker.io/eprocurementsystems</docker-registry>
     </properties>
 
     <dependencyManagement>
