ES-2455 Renamed Procurer to Dossier

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,7 +76,7 @@ e-regulation:
 e-mdm:
   ribbon:
     listOfServers: http://10.0.20.125:9161
-e-procurer:
+e-dossier:
   ribbon:
     listOfServers: http://10.0.20.125:9042
 
