--- a/pom.xml
+++ b/pom.xml
@@ -477,6 +477,7 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>processes/</include>
+                    <include>static/</include>
                     <include>bootstrap.yml</include>
                     <include>banner.txt</include>
                     <include>git.properties</include>
