--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -27,6 +27,9 @@ camunda:
   bpm:
     auto-deployment-enabled: true
     history-level: none
+    admin-user:
+      id: demo
+      password: demo123
 
 feign:
   hystrix:
