ES-2620 Added client for 'Dossier' service.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -64,6 +64,9 @@ components:
   eNotice:
     host: 10.0.20.125
     port: 9041
+  eDossier:
+    host: 10.0.20.125
+    port: 9251
 
 ribbon:
   eureka:
