Added expose port for JMX.

--- a/src/main/Dockerfile
+++ b/src/main/Dockerfile
@@ -6,5 +6,6 @@ COPY /scripts/artifact_runner.sh maven/
 COPY /resources/logback.xml maven/config/
 
 EXPOSE ${project.service.port}
+EXPOSE 8192
 
 CMD cd /maven && ./artifact_runner.sh ${final-artifact-name}.jar
