ES-3206 created qualification client, commands, client configuration

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -73,6 +73,9 @@ components:
   eContracting:
     host: 10.0.20.125
     port: 9151
+  eQualification:
+    host: 10.0.20.125
+    port: 9091
 
 ribbon:
   eureka:
