ES-3430 Added 'mdm' to 'component' section in application-dev.yml

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -79,6 +79,9 @@ components:
   eClarification:
     host: 10.0.20.125
     port: 9071
+  mdm:
+    host: 10.0.20.125
+    port: 9161
 
 ribbon:
   eureka:
